--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pwordgen",
-  "version": "0.1.0",
-  "description": "A tiny, auditable, TypeScript-native password generator for browser and Node.js",
+  "version": "0.2.0",
+  "description": "A tiny, lightweight, TypeScript-native password generation library because I wanted to roll my own password generator website because they all suck.",
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -17,18 +17,24 @@
   ],
   "sideEffects": false,
   "scripts": {
-    "build": "tsc",
     "dev": "tsc --watch",
+    "build": "tsc",
     "test": "vitest run",
     "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:coverage:watch": "vitest --coverage",
+    "test:coverage:ui": "vitest --coverage --ui",
+    "coverage:report": "vitest run --coverage && echo '\\n📊 Coverage report generated in ./coverage/index.html'",
+    "coverage:open": "npm run coverage:report && open coverage/index.html",
+    "coverage:check": "vitest run --coverage --reporter=verbose",
     "type-check": "tsc --noEmit",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "prettier": "prettier --check src/**/*.ts",
     "prettier:fix": "prettier --write src/**/*.ts",
-    "clean": "rm -rf dist",
+    "clean": "rm -rf dist coverage",
     "prepare": "npm run clean && npm run build",
-    "prepublishOnly": "npm run test && npm run type-check && npm run lint && npm run prettier"
+    "prepublishOnly": "npm run test:coverage && npm run type-check && npm run lint && npm run prettier"
   },
   "keywords": [
     "password",
@@ -36,10 +42,8 @@
     "crypto",
     "security",
     "typescript",
-    "typescript-native",
     "browser",
-    "node",
-    "nodejs"
+    "node"
   ],
   "author": "Yaqin Hasan",
   "license": "MIT",
@@ -55,6 +59,7 @@
     "@types/node": "^24.3.0",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
     "@typescript-eslint/parser": "^8.41.0",
+    "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9.34.0",
     "prettier": "^3.6.2",
     "typescript": "^5.9.2",
