--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,11 +25,11 @@ jobs:
       - name: Type check
         run: npm run type-check
 
-      - name: Run tests
+      - name: Test (Vitest)
         run: npm run test
 
-      - name: Lint
+      - name: Lint (ESLint)
         run: npm run lint
 
-      - name: Check formatting
+      - name: Formatting (Prettier)
         run: npm run prettier
