--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pwordgen",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "A tiny, lightweight, TypeScript-native password generation library because I wanted to roll my own password generator website because they all suck.",
   "type": "module",
   "main": "./dist/index.js",
@@ -18,7 +18,7 @@
   "sideEffects": false,
   "scripts": {
     "dev": "tsc --watch",
-    "build": "tsc",
+    "build": "tsc && tsc-alias -f",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
@@ -62,6 +62,7 @@
     "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9.34.0",
     "prettier": "^3.6.2",
+    "tsc-alias": "^1.8.16",
     "typescript": "^5.9.2",
     "vitest": "^3.2.4"
   },
